<?xml version="1.0" encoding="utf-8"?>
<!--
 * SysLog - A simple logging tool
 * Copyright (C) 2013  Scott Warner <Tortel1210@gmail.com>
 * 
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
-->
<resources>
    <string name="app_name">SysLog</string>
    
    <!-- Strings in the activity -->
    <string name="desc">This application will save the logs, compress them, and let you upload them easily.</string>
    <string name="log_select">Select log types:</string>
    <string name="main_log">Main Log</string>
    <string name="kernel_log">Kernel Log</string>
    <string name="last_kmsg">Last Kernel Log</string>
    <string name="modem_log">Modem Log</string>
    <string name="take_log">Take Log</string>
    
    <string name="optional_info">Optional Information:</string>
	<string name="file_name">Text to append to file name</string>
	<string name="notes">Notes to include in the zip file</string>
	<string name="grep_prompt">Grep the following log:</string>
	<string name="grep_hint">Grep String</string>
	
	<!-- Array for the grep spinner -->
	<string-array name="grep_options">
	    <item>Main Log</item>
	    <item>Kernel Log</item>
	    <item>Last Kernel Log</item>
	    <item>Modem Log</item>
	    <item>All Logs</item>
	</string-array>
    
    <!-- Status messages -->
    <string name="working">Working&#8230;</string>
    <string name="done">Done!</string>
    <string name="checking_root">Checking root access&#8230;</string>
    <string name="close">Close</string>
    <string name="save_path">Logs saved to sdcard/</string>
    
    <!-- Warnings/Errors -->
    <string name="noroot">Warning: No root access. Logs may be incomplete or missing.</string>
    <string name="noroot_jb">Warning: No root access. Without root, it is not possible to get system or modem logs, 
and with some 3.x kernels it also may not be able to get kernel logs.</string>
    <string name="error">Error saving logs. Check your SD card.</string>
    <string name="storage_err">The external storage is not writable, unable to save logs.</string>
    
    <!-- Information/About strings -->
    <string name="information">This is a simple application that takes the system logs via dmesg and logcat,
and saves them to the primary external storage under SysLog/{Date-Time}, compresses them, and lets you upload/email them.
&lt;br /&gt;&lt;br /&gt;
Root access is &lt;b&gt;required&lt;/b&gt; for 4.1+ to access the full logs, and in some cases for kernel logs.
&lt;br /&gt;&lt;br /&gt;
This app is open source, and licensed under the GPL, version 2. You can view the source on &lt;a href="http://github.com/Tortel/Syslog"&gt;GitHub&lt;/a&gt;
&lt;br /&gt;&lt;br /&gt;
This app uses available on &lt;a href="http://github.com/Chainfire/libsuperuser"&gt;libsuperuser&lt;/a&gt;, by Jorrit \'Chainfire\' Jongma, licensed under the Apache License, Version 2
&lt;br /&gt;&lt;br /&gt;
This app uses the &lt;a href="http://actionbarsherlock.com/"&gt;ActionBarSherlock&lt;/a&gt; compatibility library by Jake Wharton, licensed under the Apache License, Version 2
</string>
	
	<!-- Menu Strings -->
	<string name="about">About</string>
	<string name="clean_uncompressed">Clean Uncompressed Logs</string>
	<string name="clean_all">Clean All Logs</string>
	<string name="menu_settings">Settings</string>
	
	<!-- Exception dialog strings -->
	<string name="show_stacktrace">Show Stacktrace</string>
	<string name="error_dialog_title">Uh-oh!</string>
	<string name="send_bugreport">Send Bug Report</string>
	<string name="dismiss">Dismiss</string>
	<string name="bugreport_notice">Note: Sending a bug report opens an email application so you can email the developer</string>
	
	<!-- Oh shit strings -->
	<string name="oh_shit_title">Well, this sucks</string>
	<string name="oh_shit_message">You don\'t seem to have an email application installed. SysLog will now crash.
	    If you have the option, please send a report through the force close dialog.</string>
</resources>
